# CodeSamples

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.CodeSamples  CodeSamples.cmake  CodeSamples.yml.in  Component.py  ProcessSamplesExeTemplate.pl  SConstruct  boost-fusion.hxx  boost-multi-index.hpp  boost-multi-index.hxx  boost-spirit.hxx  boost-xpr.hxx  boost-xpressive.hxx  boost.hxx  command-line-args.hxx  cstd.h  getopt.hxx  qt.hxx  std.h  std.hxx  test.pl.in  test.pl.tmpl  test.py.in  utils.py  wscript
Alembic/: CMakeLists.txt  write.cxx
Algorithms/: CMakeLists.txt  array.cxx  excel.cxx  increment-array.cxx  interleave.cxx  largest-number.cxx  next-palindrome.cxx  numbers.cxx  permute-string.cxx  pre-order-to-bst.cxx  shifted-sorted-array.cxx  string-replace.cxx  string.cxx  swap-array.cxx  zero-one-array.cxx
Asio/: CMakeLists.txt  dispatch.cxx  post.cxx  signal.cxx  timer.cxx
Boost/: CMakeLists.txt  SConscript  iostream.cxx  json.cxx  json_sample.json  recursive-dir-listing.cxx  same.cxx  test.json  variant.cxx  wscript
CPP/: CMakeLists.txt  autoptr.cxx  base-class-virtual.cxx  bind.cxx  boost-qstring.cxx  covariant.cxx  crtp.cxx  delete.cxx  diamond.cxx  dispatch.cxx  double-dispatch.cxx  features.cxx  iterator.cxx  lambda.cxx  map-foreach.cxx  parse-args-test.cxx  print.cxx  regex.cxx  smart_pointers.cxx  stl.cxx  struct.cxx  template.cxx  test.cxx  triplet.hxx  zip-iterator-with-qstringlist.cxx
CommandLineArgs/: CMakeLists.txt  ParseArgs.cxx  ParseArgs.hxx  wscript
Config/: dot2svg  gviminit.vim.in
DataStructures/: CMakeLists.txt  avl.cxx  binary_tree.cxx  heap.cxx  insertion_sort.cxx  list.cxx  qualified-number.cxx  sort.cxx  sorting.cxx  splay.cxx
Debug-Code/: CMakeLists.txt  bind.cxx  derived.cxx  iterator.cxx  multi-index.cxx  namespace.cxx  property-tree.cxx  smart-ptr.cxx  test1.cxx  test2.cxx  unordered-map.cxx  variant.cxx
Documentation/: Makefile  geom.aux  geom.out  geom.tex
DownloadFile/: CMakeLists.txt
Dumper/: CMakeLists.txt  dumper.hxx  json_writer.cxx  json_writer.hxx  main.cxx  prettyprint.hxx  sfinae.hxx  stream.hxx  writer.hxx  yamlwriter.cxx  yamlwriter.hxx
FileReading/: BseHistoricalData.cxx  BseHistoricalIndices.cxx  BseIndices.cxx  BseIndicesList.cxx  BseNseCodes.cxx  CMakeLists.txt  FnoContracts.cxx  FnoFutures.cxx  FnoLotSizes.cxx  FnoOptions.cxx  Holidays.cxx  Icici.cxx  IciciCodeSearch.cxx  Kotak.cxx  MoneyControl.cxx  MoneyControlAlphabeticSearch.cxx  MoneyControlCodeSearch.cxx  MoneyControlNameSearch.cxx  NameFromIcici.cxx  NseHistoricalDataCsv.cxx  NseHistoricalIndices.cxx  NseIndices.cxx  NseIndicesList.cxx  file-reading.hxx  pricechart_ind.php  stock-prices.hxx
Fusion/: CMakeLists.txt  fusion-init.cxx  map-signals.cxx  map.cxx  pp-array-to-map.cxx  test.cxx  vector.cxx
Gdb/: CMakeLists.txt  variant.cxx
Geometry/: CMakeLists.txt  point.hxx  point_test.cxx
Holidays/: CMakeLists.txt  holidays-mc.html  mc.cxx
Json/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  json-main  main.cxx
Miscellaneous/: CMakeLists.txt  format.cxx
MongoDB/: CMakeLists.txt  first.cxx
Mpl/: CMakeLists.txt  macros.cxx  map.cxx
Multi-Index/: CMakeLists.txt  test1.cxx
MultiThreading/: CMakeLists.txt  boost-thread.cxx  gtkmm.cxx  pthread.cxx  qt.cxx
MultiThreading/gtkmm_files/: Window.cpp  Window.hpp
MultiThreading/qt_files/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
NG/: CMakeLists.txt  file.htm  file10.htm  file11.htm  file12.htm  file2.htm  file3.htm  file4.htm  get-ng-image-title.cpp  load-ng-image-details.cxx  ng-details.hpp  ng_download-090124.html  ng_download-090729.html  ng_download-090902.html  output.xml  save-copy.cpp  save-ng-image-details.cxx  skg.xml
OpenGL/: CMakeLists.txt  opengl.hxx  simple.cxx  sphere.cxx  torus.cxx
OpenGL/lib/: CMakeLists.txt  openglwindow.cpp  openglwindow.hpp
OpenGL/main/: CMakeLists.txt
OpenGL/shader/: CMakeLists.txt  fshader.glsl  main.cxx  shader.cxx  shader.hxx  vshader.glsl
OpenGL/simple/: CMakeLists.txt  main.cxx  simple.cxx  simple.hxx
OpenSceneGraph/: CMakeLists.txt  Geometry.cxx  Sphere.cxx  geometry.cxx  sphere.cxx
Perl/: CMakeLists.txt  CallPerl.cxx  ExtendPerl.cxx  Perl.h  Simple.c  call_perl.cxx
Perl/CallPerl_files/: CallPerl.pl  Test.pl
PerlCpp/: CMakeLists.txt  CommandLineArgs.cxx  CommandLineArgs.hxx  Main.cxx  SV2Obj.hxx
PerlCpp/perl/: perl-test.pl.in  test.pl  test.pl.in
PerlCpp/pm/: Test.pm
PerlCpp/src/: Accessor.h  Base.cpp  Base.h  CMakeLists.txt  Derived.cpp  Derived.h  PropertyTree.h  ptree.h
PerlCpp/xs/: Base.xsp  CMakeLists.txt  Derived.xsp  Ptree.xsp  Test.xs  perlcpp.tsp  test.typemap
PerlNew/: CMakeLists.txt  main.cpp
Phoenix/: CMakeLists.txt  bind.cxx  bindptree.cxx  lambda.cxx  phoenix.hxx  signals.cxx  test-from-net.cxx  zip-iterator.cxx
Poco/: CMakeLists.txt  rest.cxx
Poppler/: CMakeLists.txt  read-pdf.cxx
PreProcessor/: CMakeLists.txt  pp.cxx  preprocessor.cxx  testheader.hxx
PropertyTree/: CMakeLists.txt  date.cxx  propertytree.hxx
PyBindings/: CMakeLists.txt  class.cxx  class.hpp  first.cxx  first.hpp  modclass.cpp  modfirst.cpp
Python/: CMakeLists.txt  CallPython.cxx
Qt/: CMakeLists.txt  main.cxx.in
Qt/main/: main.cxx
Qt/main/Src/: CMakeLists.txt  Window.cxx
Qt/main/Ui/: MainWindow.ui
Qt/qaction_files/Src/: CMakeLists.txt
Qt/rest_files/Include/: RestSampleWindow.hxx  SearchWidget.hxx
Qt/rest_files/Src/: CMakeLists.txt  RestSampleWindow.cxx  SearchWidget.cxx
Qt/rest_files/Ui/: SearchWidget.ui
Qt/tab_focus_files/: CMakeLists.txt
Qt/tab_focus_files/Include/: FocusItem.hxx  Label.hxx  LineEdit.hxx  TabFocusWindow.hxx  TabWidget.hxx
Qt/tab_focus_files/Src/: CMakeLists.txt  TabFocusWindow.cxx  TabWidget.cxx
Qt/tab_focus_files/Ui/: TabWidget.ui
QtOpenGL/: CMakeLists.txt  main.cxx.in
Rest/: CMakeLists.txt  simple.cxx  tbb.cxx
Signals/: CMakeLists.txt  Nary.cxx
Signals/Nary_files/: SignalBase.h
Spirit/: CMakeLists.txt  CsvReading.cxx  rule.cxx  spirit.hxx
Streams/: CMakeLists.txt  filter.cxx
TBB/: CMakeLists.txt  simple.cxx
Templates/: CMakeLists.txt  (+2 more)
(+54 files in other folders)
